--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
     "base-64": "^0.1.0",
-    "expo": "^37.0.12",
+    "expo": "^39.0.3",
     "firebase": "^7.14.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -22,7 +22,8 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "sharp-cli": "^1.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
